[package]
name = "agglayer-jsonrpc-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-config.workspace = true
agglayer-contracts.workspace = true
agglayer-rate-limiting.workspace = true
agglayer-rpc.workspace = true
agglayer-storage.workspace = true
agglayer-telemetry.workspace = true
agglayer-types.workspace = true

alloy.workspace = true
axum = { workspace = true, features = ["tokio", "http1", "http2"] }
buildstructor.workspace = true
eyre.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
jsonrpsee = { workspace = true, features = ["full"] }
pin-project.workspace = true
reqwest.workspace = true
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
unified-bridge.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["full", "node-bindings"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["client"] }
insta.workspace = true
fail = { workspace = true, features = ["failpoints"] }
jsonrpsee-test-utils = { git = "https://github.com/paritytech/jsonrpsee.git", tag = "v0.24.9" }
lazy_static.workspace = true
mockall.workspace = true
rand.workspace = true
rstest.workspace = true
serde_json.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-capture = "0.1.0"

agglayer-config = { workspace = true, features = ["testutils"] }
agglayer-storage = { workspace = true, features = ["testutils"] }
agglayer-types = { workspace = true, features = ["testutils"] }

[lints]
workspace = true

[features]
testutils = ["dep:rstest"]
