[package]
name = "agglayer-node"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
buildstructor.workspace = true
ethers = { workspace = true, features = ["solc"] }
futures.workspace = true
hex.workspace = true
hyper.workspace = true
jsonrpsee = { workspace = true, features = ["full"] }
parking_lot.workspace = true
pin-project = "1.1.7"
reqwest = "0.12.9"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http = { version = "0.6.2", features = ["full"] }
tower.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing.workspace = true

agglayer-config = { path = "../agglayer-config" }
agglayer-contracts = { path = "../agglayer-contracts" }
agglayer-clock = { path = "../agglayer-clock" }
agglayer-telemetry = { path = "../agglayer-telemetry" }
agglayer-types.workspace = true
agglayer-signer = { path = "../agglayer-signer" }
agglayer-storage = { path = "../agglayer-storage" }
agglayer-certificate-orchestrator = { path = "../agglayer-certificate-orchestrator" }
pessimistic-proof = { path = "../pessimistic-proof" }
agglayer-aggregator-notifier = { path = "../agglayer-aggregator-notifier" }

[dev-dependencies]
alloy = { workspace = true, features = ["full", "node-bindings"] }
ethers.workspace = true
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["client"] }
insta.workspace = true
fail = { workspace = true, features = ["failpoints"] }
jsonrpsee-test-utils = { git = "https://github.com/paritytech/jsonrpsee.git", tag = "v0.24.7" }
lazy_static.workspace = true
mockall.workspace = true
rand.workspace = true
rstest.workspace = true
serde_json.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-capture = "0.1.0"

agglayer-config = { path = "../agglayer-config", features = ["testutils"] }
agglayer-storage = { path = "../agglayer-storage", features = ["testutils"] }
agglayer-types = { path = "../agglayer-types", features = ["testutils"] }
agglayer-prover = { path = "../agglayer-prover", features = ["testutils"] }
pessimistic-proof-test-suite = { path = "../pessimistic-proof-test-suite" }

[features]
default = ["sp1"]
sp1 = []
