[package]
name = "agglayer-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
buildstructor.workspace = true
ethers = { workspace = true, features = ["solc"] }
futures.workspace = true
hex.workspace = true
hyper.workspace = true
jsonrpsee = { workspace = true, features = ["full"] }
pin-project.workspace = true
reqwest = "0.12.12"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower-http = { version = "0.6.2", features = ["full"] }
tower.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing.workspace = true

agglayer-aggregator-notifier.workspace = true
agglayer-certificate-orchestrator.workspace = true
agglayer-clock.workspace = true
agglayer-config.workspace = true
agglayer-contracts.workspace = true
agglayer-rate-limiting.workspace = true
agglayer-signer.workspace = true
agglayer-storage.workspace = true
agglayer-telemetry.workspace = true
agglayer-types.workspace = true
pessimistic-proof.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["full", "node-bindings"] }
ethers.workspace = true
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["client"] }
insta.workspace = true
fail = { workspace = true, features = ["failpoints"] }
jsonrpsee-test-utils = { git = "https://github.com/paritytech/jsonrpsee.git", tag = "v0.24.7" }
lazy_static.workspace = true
mockall.workspace = true
rand.workspace = true
rstest.workspace = true
serde_json.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-capture = "0.1.0"

agglayer-config = { workspace = true, features = ["testutils"] }
agglayer-prover = { workspace = true, features = ["testutils"] }
agglayer-storage = { workspace = true, features = ["testutils"] }
agglayer-types = { workspace = true, features = ["testutils"] }
pessimistic-proof-test-suite.workspace = true

[features]
default = ["sp1"]
sp1 = []
