[package]
name = "agglayer-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy-primitives = { version = "0.8.20", features = ["serde", "k256"] }
byteorder = "1.5.0"
k256 = "0.13.4"
serde = { version = "1.0.217", features = ["derive"] }

[lints]
workspace = true
