[package]
name = "agglayer-prover-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = "0.13.3"
tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
    "transport",
] }
