[package]
name = "agglayer-prover-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
serde.workspace = true
sp1-sdk.workspace = true
thiserror.workspace = true
tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
    "transport",
] }

agglayer-interop = { workspace = true, features = ["grpc-compat"] }
prover-executor.workspace = true
pbjson.workspace = true
