[package]
name = "agglayer-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
buildstructor.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing.workspace = true
tower.workspace = true
tonic.workspace = true
tonic-health = "0.12.3"
tonic-reflection = "0.12.3"

agglayer-config = { path = "../agglayer-config" }
agglayer-prover-types = { path = "../agglayer-prover-types" }
agglayer-telemetry = { path = "../agglayer-telemetry" }
pessimistic-proof = { path = "../pessimistic-proof" }
agglayer-types = { path = "../agglayer-types", optional = true }

sp1-sdk.workspace = true
sp1-prover.workspace = true

[dev-dependencies]
agglayer-types = { path = "../agglayer-types" }

[features]
default = []
testutils = ["agglayer-types"]
