[package]
name = "agglayer-prover"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
buildstructor.workspace = true
eyre.workspace = true
prost.workspace = true
sp1-sdk.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tonic = { workspace = true, features = ["zstd", "router"] }
tonic-health.workspace = true
tonic-reflection.workspace = true
tower = { workspace = true, features = ["timeout"] }
tracing.workspace = true

agglayer-prover-config.workspace = true
agglayer-prover-types.workspace = true
agglayer-telemetry.workspace = true
prover-engine.workspace = true
prover-executor.workspace = true
prover-logger.workspace = true



[features]
default = []
testutils = []
gpu = ["sp1-sdk/cuda"]
