[package]
name = "agglayer-rate-limiting"
version.workspace = true
edition.workspace = true

[dependencies]
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
#serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }

agglayer-config = { path = "../agglayer-config" }
agglayer-types = { path = "../agglayer-types" }
agglayer-utils = { path = "../agglayer-utils" }

[features]
default = []
testutils = []
