[package]
name = "agglayer-rate-limiting"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
parking_lot.workspace = true
serde_with.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

agglayer-config.workspace = true
agglayer-utils.workspace = true
