[package]
name = "agglayer-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-contracts.workspace = true
agglayer-config.workspace = true
agglayer-interop.workspace = true
agglayer-primitives.workspace = true
agglayer-rate-limiting.workspace = true
agglayer-storage.workspace = true
agglayer-tries.workspace = true
agglayer-types.workspace = true
pessimistic-proof.workspace = true


alloy.workspace = true
eyre.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
agglayer-storage = { workspace = true, features = ["testutils"] }

[lints]
workspace = true
