[package]
name = "agglayer-settlement-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-config.workspace = true
agglayer-storage.workspace = true
agglayer-types.workspace = true

alloy.workspace = true
async-trait.workspace = true
derive_more.workspace = true
educe.workspace = true
eyre.workspace = true
fail.workspace = true
mockall = { workspace = true, optional = true }
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
agglayer-storage = { workspace = true, features = ["testutils"] }
alloy = { workspace = true, features = ["node-bindings"] }
rstest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[features]
testutils = ["dep:mockall"]

[lints]
workspace = true
