[package]
name = "agglayer-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true

# Alloy dependencies for the migration from ethers
alloy-signer.workspace = true
alloy-signer-local = { workspace = true, features = ["keystore"] }
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true

agglayer-config = { path = "../agglayer-config" }
agglayer-gcp-kms = { path = "../agglayer-gcp-kms" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
rstest.workspace = true
