[package]
name = "agglayer-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true

alloy.workspace = true
alloy-primitives.workspace = true
alloy-signer-local.workspace = true
derive_more = {workspace = true, features = ["is_variant"]}
tracing.workspace = true

agglayer-config = { path = "../agglayer-config" }
agglayer-gcp-kms = { path = "../agglayer-gcp-kms" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
rstest.workspace = true
