[package]
name = "agglayer-sp1"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
agglayer-interop-types.workspace = true
serde.workspace = true
sp1-core-executor.workspace = true
sp1-hypercube.workspace = true
sp1-primitives.workspace = true
sp1-sdk.workspace = true
sp1-sdk-v5.workspace = true
thiserror.workspace = true

[features]
testutils = []
