[package]
name = "agglayer-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex.workspace = true
parking_lot.workspace = true
rand = { version = "0.9.0", optional = true }
rocksdb = "0.23.0"
serde.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

agglayer-config.workspace = true
agglayer-types.workspace = true
agglayer-tries.workspace = true
pessimistic-proof.workspace = true

mockall = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5.1"
alloy-primitives.workspace = true
insta.workspace = true
rand.workspace = true
rstest.workspace = true
serde-reflection.workspace = true
sp1-sdk.workspace = true
tokio.workspace = true

agglayer-types = { workspace = true, features = ["testutils"] }
pessimistic-proof-test-suite.workspace = true

agglayer-storage = { workspace = true, features = ["testutils"] }

[[bench]]
name = "latest_certificate_bench"
harness = false
required-features = ["testutils"]

[features]
testutils = ["rand", "mockall", "agglayer-types/testutils"]
