[package]
name = "agglayer-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
eyre.workspace = true
hex.workspace = true
parking_lot.workspace = true
prost.workspace = true
prost-types.workspace = true
rand = { version = "0.9.0", optional = true }
rocksdb = "0.24.0"
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

agglayer-config.workspace = true
agglayer-types.workspace = true
agglayer-tries.workspace = true
agglayer-utils = { workspace = true, optional = true }
pessimistic-proof.workspace = true

mockall = { workspace = true, optional = true }

[dev-dependencies]
clap.workspace = true
criterion.workspace = true
alloy-primitives.workspace = true
fail = { workspace = true, features = ["failpoints"] }
insta.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rstest.workspace = true
serde-reflection.workspace = true
sp1-sdk.workspace = true
test-log.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

agglayer-types = { workspace = true, features = ["testutils"] }
pessimistic-proof-test-suite.workspace = true

agglayer-storage = { workspace = true, features = ["testutils"] }

[[bench]]
name = "latest_certificate_bench"
harness = false
required-features = ["testutils"]

[features]
testutils = ["agglayer-utils", "rand", "mockall", "agglayer-types/testutils"]
