[package]
name = "agglayer-telemetry"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
agglayer-config.workspace = true
axum.workspace = true
buildstructor.workspace = true
futures.workspace = true
lazy_static.workspace = true
opentelemetry = { version = "0.29.1", features = ["metrics"] }
opentelemetry-otlp = { version = "0.29.0", features = ["trace", "grpc-tonic"]}
opentelemetry-prometheus = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "rt-tokio", "trace"] }
prometheus = "0.14.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing.workspace = true
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
