[package]
name = "agglayer-telemetry"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
agglayer-config.workspace = true
axum.workspace = true
buildstructor.workspace = true
futures.workspace = true
lazy_static.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-prometheus.workspace = true
opentelemetry_sdk.workspace = true
prometheus.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing.workspace = true
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
