[package]
name = "agglayer-test-suite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-config = { path = "../agglayer-config" }
agglayer-storage = { path = "../agglayer-storage" }
pessimistic-proof = { path = "../pessimistic-proof" }
pessimistic-proof-test-suite = { path = "../pessimistic-proof-test-suite" }

rstest.workspace = true

[lints]
workspace = true
