[package]
name = "agglayer-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agglayer-primitives.workspace = true
pessimistic-proof = { path = "../pessimistic-proof" }

ethers = { workspace = true, optional = true }
hex.workspace = true
serde.workspace = true
serde_with.workspace = true
sp1-sdk.workspace = true
sp1-core-machine.workspace = true
sp1-prover.workspace = true
thiserror.workspace = true
bincode.workspace = true
rand.workspace = true

[dev-dependencies]
agglayer-types = { path = ".", features = ["testutils"] }

[features]
default = []
testutils = ["dep:ethers"]
