[package]
name = "agglayer-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
testutils = ["dep:arbitrary", "pessimistic-proof/testutils"]

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
agglayer-interop-types.workspace = true
pessimistic-proof.workspace = true
unified-bridge.workspace = true

alloy.workspace = true
arbitrary = { workspace = true, optional = true }
derive_more.workspace = true
hex.workspace = true
serde.workspace = true
serde_with.workspace = true
sp1-sdk.workspace = true
sp1-core-machine.workspace = true
sp1-prover.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
agglayer-types = { path = ".", features = ["testutils"] }
