[package]
name = "agglayer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "string"] }
dirs.workspace = true
dotenvy.workspace = true
hex.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

agglayer-config = { path = "../agglayer-config" }
agglayer-node = { path = "../agglayer-node" }
agglayer-prover-config = { workspace = true }
agglayer-prover.workspace = true
agglayer-storage = { path = "../agglayer-storage" }
pessimistic-proof.workspace = true
fmt = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
insta.workspace = true

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build"] }
