[package]
name = "agglayer"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "env", "string"] }
dirs.workspace = true
dotenvy.workspace = true
eyre.workspace = true
hex.workspace = true
serde_json.workspace = true
sp1-sdk.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

agglayer-config.workspace = true
agglayer-node.workspace = true
agglayer-storage.workspace = true
pessimistic-proof.workspace = true
prover-executor.workspace = true

[dev-dependencies]
assert_cmd = "2.0.14"
insta.workspace = true

[build-dependencies]
color-eyre.workspace = true
eyre.workspace = true
vergen-git2 = { version = "1.0.0", features = ["build"] }
