[package]
name = "pessimistic-proof-aggregation-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
pessimistic-proof = { path = "../pessimistic-proof" }
sp1-zkvm = { version = "1.1.1", features = ["verify"] }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }

[build-dependencies]
sp1-cli = "1.1.1"
