[package]
name = "pessimistic-proof-aggregation-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3.3"
pessimistic-proof = { path = "../pessimistic-proof" }
sp1-zkvm = "1.1.1"
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes.git", package = "sha2", branch = "patch-v0.10.8" }

[build-dependencies]
sp1-cli = "1.1.1"
