[package]
name = "pessimistic-proof-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true

pessimistic-proof = { path = "../pessimistic-proof" }

sp1-sdk.workspace = true
tracing.workspace = true

[dev-dependencies]

rstest.workspace = true
hex-literal = "0.4"

reth-primitives = { git = "https://github.com/sp1-patches/reth", default-features = false, branch = "sp1-reth" }
