[package]
name = "pessimistic-proof-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
testutils = [
    "agglayer-primitives/testutils",
    "unified-bridge/testutils",
    "alloy-primitives/arbitrary",
    "dep:arbitrary",
    "dep:rand",
]

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
unified-bridge.workspace = true

alloy-primitives.workspace = true
arbitrary = { workspace = true, optional = true }
bincode = "1.3.3"
hex = "0.4.3"
hex-literal = "0.4"
tracing = "0.1.41"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde_with = { version = "3" }
thiserror = "2.0.8"
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = [
    "keccak",
] }
rand = { version = "0.9.1", optional = true }
sp1-primitives = "=4.2.1"
sp1-verifier = { version = "=4.2.1" }
sp1-zkvm = { version = "=4.2.1", features = ["verify"] }

[dev-dependencies]
unified-bridge = { workspace = true, features = ["testutils"] }
rs_merkle = { version = "1.4", default-features = false }
rand = "0.9.1"

[build-dependencies]
semver = "1.0"
toml.workspace = true
