[package]
name = "pessimistic-proof-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
testutils = [
    "agglayer-primitives/testutils",
    "unified-bridge/testutils",
    "alloy-primitives/arbitrary",
    "dep:arbitrary",
    "dep:rand",
]

[dependencies]
agglayer-bincode.workspace = true
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
unified-bridge.workspace = true

alloy-primitives.workspace = true
arbitrary = { workspace = true, optional = true }
rkyv.workspace = true
hex = "0.4.3"
hex-literal = "0.4"
tracing = "0.1.41"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3" }
thiserror = "2.0.8"
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = [
    "keccak",
] }
rand = { version = "0.9.0", optional = true }
sp1-zkvm = { version = "=5.0.0", features = ["verify"] }
rkyv-with = "0.1.2"

[dev-dependencies]
unified-bridge = { workspace = true, features = ["testutils"] }
rand = "0.9.0"

[build-dependencies]
semver = "1.0"
toml.workspace = true
