[package]
name = "pessimistic-proof-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
testutils = [
    "agglayer-primitives/testutils",
    "unified-bridge/testutils",
    "dep:rand",
]

[dependencies]
agglayer-primitives.workspace = true
agglayer-tries.workspace = true
unified-bridge.workspace = true

bytemuck = { version = "1.15", features = ["derive", "extern_crate_alloc"] }
hex-literal = "0.4"
tracing = "0.1.41"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3" }
thiserror = "2.0.16"
rand = { version = "0.9.0", optional = true }
sp1-zkvm = { version = "=5.0.0", features = ["verify"] }
memoffset = "0.9"

[dev-dependencies]
alloy.workspace = true
unified-bridge = { workspace = true, features = ["testutils"] }
rand = "0.9.0"
rstest.workspace = true

[build-dependencies]
semver = "1.0"
toml.workspace = true
