[package]
name = "pessimistic-proof-program"
version = "10.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
pessimistic-proof-core = { path = "../pessimistic-proof-core", default-features = false }
sp1-zkvm = { version = "=5.2.2", features = ["verify"] }

[build-dependencies]
sp1-cli = "=5.2.2"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
overflow-checks = true

[patch.crates-io]
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-16.9-sp1-4.1.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
